weewx change history
--------------------

2.2.0

Added plot options line_gap_fraction and bar_gap_fraction, which control
how gaps in the data are handled by the plots. Also, added more flexible
control of plot colors, using a notation such as 0xBBGGRR, #RRGGBB, or the
English name, such as 'yellow'. Finally, added day/night bands to the
plots. All contributed by Matthew Wall. Thanks, Matthew!

Fixed bug that caused rain totals to be misreported to Weather Underground
when using a metric database.

Generalized the weewx machinery so it can be used for applications other
than weather applications.

Got rid of option stats_types in weewx.conf and put it in
bin/user/schemas.py. See upgrading.html if you have a specialized stats
database.

The stats database now includes an internal table of participating
observation types. This allows it to be easily combined with the archive
database, should you choose to do so. The table is automatically created
for older stats databases.

Added rain rate calculation to FineOffsetUSB driver.

2.1.1 01/02/13

Fixed bug that shows itself when one of the variables is 'None' when
calculating a trend.

2.1.0 01/02/13

Now supports the Oregon Scientific WMR918/968 series, courtesy of user
William Page. Thanks, William!!

Now supports the Fine Offset series of weather stations, thanks to user
Matthew Wall. Thanks, Matthew!!

Now includes a Redhat init.d script, contributed by Mark Jenks. Thanks,
Mark!!

Added rsync report type as an alternative to the existing FTP report.
Another thanks to William Page!

Fill color for bar charts can now be specified separately from the outline
color, resulting in much more attractive charts. Another thanks to Matthew
Wall!!

Added a tag for trends. The barometer trend can now be returned as
$trend.barometer. Similar syntax for other observation types.

config_vp.py now returns the console version number if available (older
consoles do not offer this).
